--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 pytube = "^12.1.0"
 python-telnet-vlc = "^2.0.1"
 mutagen = "^1.45.1"
+ffmpeg-python = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
